fixed text clipping for chrome

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,6 +14,7 @@
   text-align: center;
   background: linear-gradient(to right, turquoise, magenta);
   background-clip: text;
+  -webkit-background-clip: text;
   color: transparent;
   cursor: default;
   user-select: none;
